[project]
name = "luna"
version = "0.1.0"
description = "a"
authors = [
    {name = "Sanjeet Balamurugan",email = "72962798+SanjeetBalamurugan@users.noreply.github.com"}
]
license = {text = "GNU_GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
