[project]
name = "luna"
version = "0.1.0"
description = "a"
authors = [
    {name = "Sanjeet Balamurugan",email = "72962798+SanjeetBalamurugan@users.noreply.github.com"}
]
license = {text = "GNU_GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rpi-gpio (>=0.7.1,<0.8.0)"
]

[tool.poetry]
packages = [
    { include = "luna", from = "src" }
]

[tool.poetry.scripts]
luna = "luna.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
